--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,7 +19,10 @@ html
           = link_to 'WeatherApp', root_path, :'data-no-turbolink' => true, :class => 'navbar-brand'
         .collapse.navbar-collapse.navbar-ex1-collapse
           ul.nav.navbar-nav.navbar-right.navbar-user
-            li= link_to 'Sign In', '#'
-            li= link_to 'Sign up', '#'
+            - if user_signed_in?
+              li= link_to "#{current_user.email} | Log out", destroy_user_session_path, method: :delete
+            - else
+              li= link_to 'Sign Up', new_user_registration_path
+              li= link_to 'Sign In', new_user_session_path
     .container
       = yield
