--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,7 +20,13 @@ html
         .collapse.navbar-collapse.navbar-ex1-collapse
           ul.nav.navbar-nav.navbar-right.navbar-user
             - if user_signed_in?
-              li= link_to "#{current_user.email} | Log out", destroy_user_session_path, method: :delete
+              li.dropdown
+                a.dropdown-toggle data-toggle="dropdown" href="#" role="button"
+                  | #{current_user.email}
+                  span.caret
+                ul.dropdown-menu
+                  li= link_to 'Edit Profile', '#'
+                  li= link_to 'Log out', destroy_user_session_path, method: :delete
             - else
               li= link_to 'Sign Up', new_user_registration_path
               li= link_to 'Sign In', new_user_session_path
